--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,12 @@
 [package]
-name = "encoding-size"
+name    = "encoding-size"
 version = "0.1.0"
 authors = ["Toralf Wittner <tw@dtex.org>"]
-edition = "2018"
-
-[build-dependencies]
-prost-build = "0.5"
+edition = "2021"
 
 [dependencies]
-bytes = "0.4"
-miel = { git = "https://gitlab.com/twittner/miel.git", features = ["serde"] }
-parity-scale-codec = "1.0.5"
-parity-scale-codec-derive = "1.0.2"
-prost = "0.5"
-rand = "0.7"
-serde = { version = "1.0", features = ["derive"] }
-serde_cbor = "0.10.1"
+minicbor   = { version = "0.13.2", features = ["std", "derive"] }
+rand       = "0.8"
+serde      = { version = "1.0", features = ["derive"] }
+serde_bare = "0.5.0"
 
