--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ minicbor   = { version = "0.13.2", features = ["std", "derive"] }
 rand       = "0.8"
 serde      = { version = "1.0", features = ["derive"] }
 serde_bare = "0.5.0"
-
+serde_bytes = "0.11"
